Updated Server settings to Azure

--- a/Server/deploy/LoadBalancing/GameServer/bin/GameServer.xml.config
+++ b/Server/deploy/LoadBalancing/GameServer/bin/GameServer.xml.config
@@ -19,7 +19,7 @@
       <S2S>
         <ConnectRetryInterval>15</ConnectRetryInterval>
         <!-- Set to the IP Address of the Photon instance where your Master application is running. -->
-        <MasterIPAddress>46.148.234.242</MasterIPAddress>
+        <MasterIPAddress>74.235.82.34</MasterIPAddress>
         <OutgoingMasterServerPeerPort>4520</OutgoingMasterServerPeerPort>
       </S2S>
 
@@ -37,10 +37,10 @@
         <!-- Client-to-Gameserver WebSocket connections. Needs to match the WebSocketListener in PhotonServer.config -->
         <GamingWebSocketPort>9091</GamingWebSocketPort>
 
-        <PublicIPAddress>46.148.234.242</PublicIPAddress>
+        <PublicIPAddress>74.235.82.34</PublicIPAddress>
         <PublicIPAddressIPv6></PublicIPAddressIPv6>
         <!-- the hostname for this gameserver. Required for HTTP & websocket connections. Change it to a useful entry, like hostname.mydomain.com, for a production scenario. -->
-        <PublicHostName>Fibonacci</PublicHostName>
+        <PublicHostName>Garibaldi</PublicHostName>
       </Master>
 
       <HttpQueueSettings>
